# life-py

./: .gitignore  LICENSE  Makefile  README.md  life.toml.example  pyproject.toml
life/: __init__.py  __main__.py  app.py  cli.py  endpoints.py  life.tcss  log.py  tui.py  util.py
life/commands/: __init__.py  account.py  area.py  habit.py  note.py  session.py  task.py  todo.py  transaction.py
life/notion/: __init__.py  endpoints.py  filters.py  schema.py
